documentation_and_delete_solved
